--- a/src/sass/_bookStore.scss
+++ b/src/sass/_bookStore.scss
@@ -2,8 +2,13 @@ html {
     font-size: 100%;
 }
 
+li {
+    list-style: none;
+}
+
 .bookStore {
     font-family: 'Arial', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', 'Meiryo', 'sans-serif';
+    color: #2a2a2a;
 
     #header {
         height: 100vh; //ビューポートの高さに対する割合
@@ -31,24 +36,28 @@ html {
             margin-bottom: 20px;
         }
 
-        .archive {
+        .flex-item {
             display: flex;
             justify-content: space-between;
             margin-top: 30px;
             .Item {
                 width: 49%;
                 position: relative;
+
+                &:hover {
+                    opacity: 0.7;
+                }
             }
 
             .ItemContent {
-                max-width: 300px;
+                width: 300px;
                 color: #ffffff;
                 background-color: gray;
                 padding: 10px 0;
                 margin: 0 auto;
                 top: 50%;
-                left: 0;
-                right: 0;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 position: absolute;
             }
 
@@ -58,13 +67,165 @@ html {
         }
     }
 
-    .fashion {
+    .sentenceDetail {
+        display: inline-block;
+        border: solid 1px #2a2a2a;
+        text-decoration: none;
+        color: #2a2a2a;
+        text-align: center;
+        font-size: 20px;
+        margin-top: 40px;
+        padding: 20px 50px;
+
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+
+    .fashion-style {
         height: 500px;
         background-image: url('../img/fashion.jpg');
         background-size: cover;
         background-position: center top;
-        margin-top: 80px;
+        margin: 80px 0;
         padding-top: 50px;
-        
+    }
+
+    .catalog-antique {
+        background-color: #f5f5f5;
+        padding: 80px 0;
+
+        .flex-item {
+            margin-top: 0;
+            align-items: center;
+
+            .item {
+                width: 48%;
+
+                .item-title {
+                    margin-bottom: 50px;
+                }
+
+                .item-text {
+                    color: #2a2a2a;
+                    margin-bottom: 30px;
+                    text-align: left;
+                }
+            }
+        }
+    }
+
+    #footer {
+        background-color: #2a2a2a;
+        color: #ffffff;
+
+        .MainContainer {
+            text-align: start;
+            padding-top: 100px;
+            padding-bottom: 100px;
+
+            .flex-item {
+                margin-top: 0px;
+
+                .item {
+                    width: 33%;
+
+                    &:first-child {
+                        padding: 60px 0;
+                    }
+
+                    .footer-title {
+                        font-size: 16px;
+                        margin-bottom: 20px;
+                    }
+
+                    ul {
+                        font-size: 12px;
+                        li::before {
+                            content: '-';
+                            margin-right: 5px;
+                        }
+                    }
+
+                    .footer-text {
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+
+        .copyright {
+            color: #2a2a2a;
+            text-align: center;
+            padding: 30px 0;
+            background-color: #ffffff;
+        }
+    }
+
+    @media screen and (max-width: 896px) {
+
+        .MainContainer {
+            .flex-item {
+                flex-direction: column;
+                .Item {
+                    width: 100%;
+                    
+                    &:first-child {
+                        margin-bottom: 30px;
+                    }
+                }
+            }
+        }
+
+        .catalog-antique {
+            padding: 30px 0;
+            .flex-item {
+                .item {
+                    width: 100%;
+
+                    &:first-child {
+                        margin-bottom: 60px;
+                    }
+                }
+            }
+        }
+
+        #footer {
+            .MainContainer {
+                padding-top: 30px;
+                padding-bottom: 30px;
+
+                .flex-item {
+                    margin-top: 0px;
+    
+                    .item {
+                        width: 100%;
+    
+                        &:first-child {
+                            padding: 0;
+                            text-align: center;
+                        }
+    
+                        .footer-title {
+                            font-size: 16px;
+                            margin-bottom: 20px;
+                        }
+    
+                        ul {
+                            font-size: 12px;
+                            margin: 30px 0;
+                            li::before {
+                                content: '-';
+                                margin-right: 5px;
+                            }
+                        }
+    
+                        .footer-text {
+                            font-size: 12px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
