マークアップ練習

--- a/src/sass/_bookStore.scss
+++ b/src/sass/_bookStore.scss
@@ -12,7 +12,7 @@ li {
 
     #header {
         height: 100vh; //ビューポートの高さに対する割合
-        background-image: url('../img/mainvisual.jpg');
+        background-image: url('../img/img_bookstore_mainvisual.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -84,7 +84,7 @@ li {
 
     .fashion-style {
         height: 500px;
-        background-image: url('../img/fashion.jpg');
+        background-image: url('../img/img_bookstore_fashion.jpg');
         background-size: cover;
         background-position: center top;
         margin: 80px 0;
