--- a/src/html/bookStore.pug
+++ b/src/html/bookStore.pug
@@ -4,14 +4,14 @@ html(lang="ja")
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
     title Mag88
-    meta(name="description" content="説明文")
+    meta(name="description" content="マークアップ練習")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    link(rel="shortcut icon" href="../img/favicon.ico")
+    link(rel="shortcut icon" href="../img/img_bookstore_favicon.ico")
   
 body.bookStore
   header#header
     h1.main-title
-      img(src=require("~/img/logo.svg"), alt="Mag88")
+      img(src=require("~/img/img_bookstore_logo.svg"), alt="Mag88")
   main 
     .MainContainer
       h2.section-title A special, long article in a newspaper or magazine
@@ -20,14 +20,14 @@ body.bookStore
         | テキストテキストテキストテキストテキストテキストテキストテキスト
       .flex-item
         a.Item(href="#")   
-          img(src=require("~/img/magazine-archive.jpg"), alt="Mag88")
+          img(src=require("~/img/img_bookstore_magazine-archive.jpg"), alt="Mag88")
           .ItemContent
             h2.item-title Archive 
             p.item-text テキストテキストテキストテキスト
                br
                | テキストテキストテキスト
         a.Item(href="#") 
-          img(src=require("~/img/magazine-new.jpg"), alt="Mag88")
+          img(src=require("~/img/img_bookstore_magazine-new.jpg"), alt="Mag88")
           .ItemContent
             h2.item-title New 
             p.item-text  テキストテキストテキストテキスト
@@ -45,7 +45,7 @@ body.bookStore
       .MainContainer 
         .flex-item 
          .item 
-            img(src=require("~/img/catalog.jpg"), alt="Mag88")
+            img(src=require("~/img/img_bookstore_catalog.jpg"), alt="Mag88")
          .item 
             h2.item-title Catalog
             p.item-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -61,13 +61,13 @@ body.bookStore
             p.item-text テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             a.sentenceDetail(href="#") Read More
           .item 
-            img(src=require("~/img/antique.jpg"), alt="Mag88")
+            img(src=require("~/img/img_bookstore_antique.jpg"), alt="Mag88")
   
   footer#footer 
     .MainContainer
       .flex-item 
         .item 
-          img(src=require("~/img/logo.svg"), alt="Mag88")
+          img(src=require("~/img/img_bookstore_logo.svg"), alt="Mag88")
         .item 
           h2.footer-title タイトル
           ul 
