--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,12 +1,27 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 *, :after, :before {
-    box-sizing: inherit;
+  background-repeat: no-repeat;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
