--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,20 +1,125 @@
-html {
-  font-size: 100%;
-}
-  
-li {
-  list-style: none;
-}
-
 .media {
   #header {
     width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     padding: 20px 40px;
     position: fixed;
     z-index: 10;
     background-color: #fff;
+
+    #navi {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: -300px;
+      bottom: 0;
+      width: 250px;
+      color: #fff;
+      padding: 60px 25px;
+      background-color: #121212;
+      overflow-x: hidden;
+      overflow-y: auto;
+      transition: all .5s;
+      z-index: 20;
+      opacity: 0;
+
+      .nav_menu {
+        margin-bottom: 60px;
+        li {
+          padding: 20px 0;
+          border-top: 1px solid #fff;
+
+          &:last-child {
+            border-bottom: 1px solid #fff;
+          }
+
+          a {
+            font-size: 14.4px;
+          }
+        }
+      }
+
+      .navi_snsMenu {
+        li {
+          padding: 5px 0;
+        }
+      }
+    }
+
+    .navi_toggle {
+      display: block;
+      position: fixed;
+      top: 30px;
+      right: 60px;
+      width: 30px;
+      height: 30px;
+      transition: all .5s;
+      cursor: pointer;
+      z-index: 20;
+
+      div {
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #333;
+        position: absolute;
+        transition: transform .5s, opacity .5s;
+
+        &:nth-child(1) {
+          top: 0;
+        }
+        &:nth-child(2) {
+          top: 10px;
+        }
+        &:nth-child(3) {
+          top: 20px;
+        }
+      }
+    }
+  }
+
+  #header.show {
+    #navi {
+      opacity: 1;
+      left: 0;
+    }
+
+    .navi_toggle {
+      div {
+        background-color: #fff;
+        &:nth-child(1) {
+          transform: translateY(10px) rotate(-315deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:nth-child(3) {
+          transform: translateY(-10px) rotate(315deg);
+        }
+      }
+    }
+    .shadow {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      opacity: .8;
+      z-index: 10;
+      cursor: pointer;
+    }
+  }
+
+  #main {
+    padding-top: 80px;
+    .main_video {
+      video {
+        width: 100%;
+      }
+    }
   }
 }
-
