--- a/src/html/media.pug
+++ b/src/html/media.pug
@@ -37,3 +37,112 @@ body.media
   main#main 
     .main_video
       video(src=("../video/video.mp4") loop autoplay muted playsinline) 
+
+    section#pickup 
+      h2.section_title PICK UP 
+      ul.slick-area 
+        li
+          img(src=require("~/img/img_media_pickup1.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup2.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup3.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup4.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup5.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup6.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup7.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup8.jpg"))
+        li
+          img(src=require("~/img/img_media_pickup9.jpg"))
+    
+    section#feature 
+      h2.section_title FEATURE
+      .grid 
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature1.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature2.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature3.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature4.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature5.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature6.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature7.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature8.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+        .grid_item
+          img.scroll(src=require("~/img/img_media_feature9.jpg"))
+          .grid_item_content
+            p.grid_item_category category
+            p.grid_item_text テキストテキストテキストテキストテキストテキストテキストテキスト
+            p.grid_item_date XXXX.XX.XX
+
+    section#contact
+      h2.section_title CONTACT
+      .contact_content 
+        .content_info 
+          p テキストテキストテキスト
+          p テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          p テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+        .content_form 
+          form(action="#")
+            dl 
+              dt 
+                label(for="name") Name: 
+              dd  
+                input(type="text" id="name" name="your_name")
+              dt 
+                label(for="email") Mail: 
+              dd 
+                input(type="email" id="email" name="your_email")
+              dt 
+                label(for="message") Message: 
+              dd 
+                textarea(id="message" name="your_message")
+            .button 
+              input(type="submit" value="SEND")
+
+  footer#footer
+    p © Sneakers
+        
