--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,4 +1,6 @@
 .media {
+  line-height: 1.7;
+  font-size: 14.4px;
   #header {
     width: 100%;
     height: 80px;
@@ -121,5 +123,131 @@
         width: 100%;
       }
     }
+    .section_title {
+      font-size: 36px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    #pickup {
+      width: 100%;
+      padding: 100px 0 50px 0;
+
+      .slick-area {
+        font-size: 0;
+
+        li {
+          padding: 0 30px;
+        }
+      }
+    }
+
+    #feature {
+      max-width: 1240px;
+      padding: 100px 16px 50px 16px;
+      margin: -50px auto 10px auto;
+
+      .grid {
+        display: grid;
+        // 行や列の隙間の調整
+        gap: 25px;
+        // 列のトラック幅の指定
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+        .grid_item {
+          transition: all 0.3s ease;
+          box-shadow: 0 0 10px 5px #ccc;
+
+          img {
+            vertical-align: top;
+          }
+
+          .grid_item_content {
+            padding: 30px;
+
+            .grid_item_category {
+              font-size: 12px;
+              margin-bottom: 20px;
+            }
+
+            .grid_item_text {
+              font-weight: bold;
+              margin-bottom: 20px;
+            }
+
+            .grid_item_date {
+              font-size: 12px;
+              text-align: right;
+            }
+          }
+        }
+      }
+    }
+
+    #contact {
+      color: #fff;
+      background-color: #121212;
+      padding: 50px 0;
+
+      .contact_content {
+        max-width: 1240px;
+        padding: 0 16px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+
+        .content_info {
+          width: 45%;
+
+          p {
+            margin-bottom: 30px;
+          }
+        }
+
+        .content_form {
+          width: 45%;
+
+          input {
+            width: 100%;
+            background-color: #fff;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-style: none;
+          }
+
+          textarea {
+            width: 100%;
+            background-color: #fff;
+            padding: 10px;
+            margin-bottom: 20px;
+          }
+
+          .button {
+            input {
+              width: 200px;
+              color: #fff;
+              background-color: #121212;
+              border: solid 1px #fff;
+              padding: 12px 0;
+              margin-bottom: 0;
+              -webkit-appearance: button;
+              cursor: pointer;
+
+              &:hover {
+                color: #202020;
+                background-color: #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #footer {
+    color: #fff;
+    background-color: #121212;
+    text-align: center;
+    padding: 10px;
+    font-size: 12px;
   }
 }
