mediaページsp版作成

--- a/src/html/media.pug
+++ b/src/html/media.pug
@@ -7,7 +7,7 @@ html(lang="ja")
     meta(name="description" content="マークアップ練習")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 
-body.media 
+body#media 
   header#header 
     h1.site_title 
       a(href="#") 
@@ -40,7 +40,7 @@ body.media
 
     section#pickup 
       h2.section_title PICK UP 
-      ul.slick-area 
+      ul.slick_area 
         li
           img(src=require("~/img/img_media_pickup1.jpg"))
         li
